refactor menor, poner final en los Impl del model