@@ -1,10 +1,11 @@
-package com.uth.gestionhospitalaria.model; // O tu paquete 'model'
+package com.uth.gestionhospitalaria.model;
 
 import com.uth.gestionhospitalaria.model.Clients.*;
-import okhttp3.Interceptor; // ¡NUEVA IMPORTACIÓN!
+import okhttp3.Interceptor;
 import okhttp3.OkHttpClient;
 import okhttp3.Protocol;
-import okhttp3.Request;  // ¡NUEVA IMPORTACIÓN!
+import okhttp3.Request;
+import org.jetbrains.annotations.NotNull;
 import retrofit2.Retrofit;
 import retrofit2.converter.gson.GsonConverterFactory;
 
@@ -29,21 +30,22 @@ public class RetrofitClient {
                 httpClient.readTimeout(30, TimeUnit.SECONDS);
                 httpClient.writeTimeout(30, TimeUnit.SECONDS);
 
-                // 2. Mantenemos el fix de HTTP/1.1
+                // 2. fix de HTTP/1.1
                 httpClient.protocols(List.of(Protocol.HTTP_1_1));
 
-                // 3. Mantenemos el selector de Proxy
+                // 3.  selector de Proxy
                 System.setProperty("java.net.useSystemProxies", "true");
                 List<java.net.Proxy> proxies = ProxySelector.getDefault().select(new URI(BASE_URL));
                 if (proxies != null && !proxies.isEmpty()) {
-                    httpClient.proxy(proxies.get(0));
+                    httpClient.proxy(proxies.getFirst());
                 }
 
-                // --- 4. NUEVO FIX: Añadir un User-Agent de Navegador ---
-                // Esto "disfraza" nuestra solicitud para que parezca un navegador Chrome
+                //  User-Agent de Navegador ---
+                //  disfraza nuestra solicitud para que parezca un navegador
                 httpClient.addInterceptor(new Interceptor() {
+                    @NotNull
                     @Override
-                    public okhttp3.Response intercept(Chain chain) throws java.io.IOException {
+                    public okhttp3.Response intercept(@NotNull Chain chain) throws java.io.IOException {
                         Request original = chain.request();
                         Request.Builder requestBuilder = original.newBuilder()
                                 .header("User-Agent", "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/96.0.4664.110 Safari/537.36");
@@ -52,9 +54,8 @@ public class RetrofitClient {
                         return chain.proceed(request);
                     }
                 });
-                // --- FIN DEL NUEVO FIX ---
 
-                // 5. Construimos Retrofit
+                //  Retrofit
                 retrofit = new Retrofit.Builder()
                         .baseUrl(BASE_URL)
                         .addConverterFactory(GsonConverterFactory.create())
@@ -85,9 +86,9 @@ public class RetrofitClient {
         return getClient().create(HistorialClient.class);
     }
 
-   /* public static MedicamentoClient getMedicamentoClient() {
+    public static MedicamentoClient getMedicamentoClient() {
         return getClient().create(MedicamentoClient.class);
-    }*/
+    }
 
     public static PrescripcionClient getPrescripcionClient() {
         return getClient().create(PrescripcionClient.class);
